Updated to include semifinal games and associated bonus q's.

--- a/bowl_pool/2015-2016/rankings.html
+++ b/bowl_pool/2015-2016/rankings.html
@@ -342,79 +342,79 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2015-12-31 08:36:02</em></div>
-<div class="line"><em>Last bowl scored:  HOLIDAY BOWL (USC vs. Wisconsin)</em></div>
+<div class="line"><em>Last updated:  2015-12-31 23:27:38</em></div>
+<div class="line"><em>Last bowl scored:  COTTON BOWL (Alabama vs. Michigan State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. HAM BEAST 20.0</div>
-<div class="line">2. Santa Cruz Bill 19.75</div>
-<div class="line">3. Beaver Believer 19.0</div>
-<div class="line">4. BROCOHLI !!!!! 18.5</div>
-<div class="line">5. <strong>Eclipse 18.0</strong></div>
-<div class="line">5. Blind Prognosticators 18.0</div>
-<div class="line">7. <strong>Rocket Surgeon 17.75</strong></div>
-<div class="line">7. Go Frogs 17.75</div>
-<div class="line">9. Lucky in 2016 17.5</div>
-<div class="line">10. Yellowstone  17.25</div>
-<div class="line">10. Opposite of Dad 17.25</div>
-<div class="line">10. LumberSexual 17.25</div>
-<div class="line">10. Jake &amp; the Neverland Pirates 17.25</div>
-<div class="line">10. Corgidawg 17.25</div>
-<div class="line">15. POPO 17.0</div>
-<div class="line">15. FIELDS OF WHEAT 17.0</div>
-<div class="line">17. TTRedRaider09 16.5</div>
-<div class="line">17. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 16.5</div>
-<div class="line">17. Spiker 16.5</div>
-<div class="line">17. KROB15 16.5</div>
-<div class="line">21. GUAC BOYZ 16.25</div>
-<div class="line">21. Devil's Tower 16.25</div>
-<div class="line">21. <strong>Captain 16.25</strong></div>
-<div class="line">24. Hunter 55 16.0</div>
-<div class="line">24. FF  16.0</div>
-<div class="line">26. Team Aaron 15.75</div>
-<div class="line">26. Tan Mei yi&nbsp; 15.75</div>
-<div class="line">28. Trollotopia 15.5</div>
-<div class="line">28. Texas Women 15.5</div>
-<div class="line">28. GODIVA 15.5</div>
-<div class="line">28. Cowboy 15.5</div>
-<div class="line">28. Beach Bum 15.5</div>
-<div class="line">33. Shi boa 15.25</div>
-<div class="line">33. <strong>JessePinkman 15.25</strong></div>
-<div class="line">33. EL CAPITAN 15.25</div>
-<div class="line">33. Clairvoyantsmith 15.25</div>
-<div class="line">37. Texas State 15.0</div>
-<div class="line">37. BUBBA 15.0</div>
-<div class="line">39. <strong>Surf 14.75</strong></div>
-<div class="line">39. Hui Mama 14.75</div>
-<div class="line">41. West Coast Bias 14.5</div>
-<div class="line">41. Oregon Okie 14.5</div>
-<div class="line">41. <strong>Groodle 14.5</strong></div>
-<div class="line">41. Cotton Headed Ninny Muggins 14.5</div>
-<div class="line">45. Hou Dat 14.25</div>
-<div class="line">45. HALF DOME 14.25</div>
-<div class="line">45. Going Bowling 14.25</div>
-<div class="line">48. <strong>Mama Bear 14.0</strong></div>
-<div class="line">49. Yoda 13.75</div>
-<div class="line">49. Texsons 13.75</div>
-<div class="line">51. Spartans 13.5</div>
-<div class="line">51. <strong>D-bo 13.5</strong></div>
-<div class="line">51. Billy Bad 13.5</div>
-<div class="line">54. Slave Darby 13.25</div>
-<div class="line">54. Perfect Spiral 13.25</div>
-<div class="line">56. Pooh 13.0</div>
-<div class="line">56. Magnitogorsk 13.0</div>
-<div class="line">58. The Force Awakens 12.75</div>
-<div class="line">58. Sure Thing 12.75</div>
-<div class="line">60. Frog Man 4Ever 12.5</div>
-<div class="line">61. Gussysue 12.25</div>
-<div class="line">62. Billy Bad 2nd 12.0</div>
-<div class="line">63. COUGAR 11.25</div>
-<div class="line">64. Trojans 10.75</div>
-<div class="line">64. GMen 10.75</div>
-<div class="line">66. Julia 10.5</div>
-<div class="line">67. Deakins 9.5</div>
-<div class="line">68. Bernie Trump 9.0</div>
-<div class="line">68. Aggies 9.0</div>
+<div class="line">1. BROCOHLI !!!!! 27.5</div>
+<div class="line">2. Beaver Believer 27.0</div>
+<div class="line">3. <strong>Rocket Surgeon 26.25</strong></div>
+<div class="line">4. <strong>Eclipse 25.5</strong></div>
+<div class="line">5. <strong>JessePinkman 25.25</strong></div>
+<div class="line">6. Texsons 24.75</div>
+<div class="line">6. Team Aaron 24.75</div>
+<div class="line">6. Jake &amp; the Neverland Pirates 24.75</div>
+<div class="line">9. GUAC BOYZ 24.25</div>
+<div class="line">10. Spiker 24.0</div>
+<div class="line">11. Yoda 23.75</div>
+<div class="line">11. Santa Cruz Bill 23.75</div>
+<div class="line">11. Corgidawg 23.75</div>
+<div class="line">14. POPO 23.5</div>
+<div class="line">14. HAM BEAST 23.5</div>
+<div class="line">16. Cowboy 23.0</div>
+<div class="line">17. Yellowstone  22.75</div>
+<div class="line">17. Devil's Tower 22.75</div>
+<div class="line">19. FIELDS OF WHEAT 22.5</div>
+<div class="line">20. Hou Dat 22.25</div>
+<div class="line">20. Go Frogs 22.25</div>
+<div class="line">22. KROB15 22.0</div>
+<div class="line">23. Perfect Spiral 21.75</div>
+<div class="line">24. Texas Women 21.5</div>
+<div class="line">24. Lucky in 2016 21.5</div>
+<div class="line">24. GODIVA 21.5</div>
+<div class="line">27. West Coast Bias 21.0</div>
+<div class="line">27. TTRedRaider09 21.0</div>
+<div class="line">27. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 21.0</div>
+<div class="line">27. FF  21.0</div>
+<div class="line">27. Beach Bum 21.0</div>
+<div class="line">32. Opposite of Dad 20.75</div>
+<div class="line">33. Hunter 55 20.5</div>
+<div class="line">34. The Force Awakens 20.25</div>
+<div class="line">35. Frog Man 4Ever 20.0</div>
+<div class="line">35. BUBBA 20.0</div>
+<div class="line">37. Tan Mei yi&nbsp; 19.75</div>
+<div class="line">37. Slave Darby 19.75</div>
+<div class="line">37. Going Bowling 19.75</div>
+<div class="line">37. Clairvoyantsmith 19.75</div>
+<div class="line">41. Texas State 19.5</div>
+<div class="line">41. <strong>D-bo 19.5</strong></div>
+<div class="line">43. Sure Thing 19.25</div>
+<div class="line">43. <strong>Captain 19.25</strong></div>
+<div class="line">45. Pooh 19.0</div>
+<div class="line">45. Blind Prognosticators 19.0</div>
+<div class="line">47. HALF DOME 18.75</div>
+<div class="line">48. <strong>Mama Bear 18.5</strong></div>
+<div class="line">49. Trojans 18.25</div>
+<div class="line">49. LumberSexual 18.25</div>
+<div class="line">51. Magnitogorsk 18.0</div>
+<div class="line">51. Cotton Headed Ninny Muggins 18.0</div>
+<div class="line">53. <strong>Surf 17.75</strong></div>
+<div class="line">53. EL CAPITAN 17.75</div>
+<div class="line">55. Trollotopia 17.5</div>
+<div class="line">56. Shi boa 17.25</div>
+<div class="line">57. Spartans 17.0</div>
+<div class="line">58. Hui Mama 16.75</div>
+<div class="line">58. COUGAR 16.75</div>
+<div class="line">60. <strong>Groodle 16.5</strong></div>
+<div class="line">60. Billy Bad 16.5</div>
+<div class="line">60. Bernie Trump 16.5</div>
+<div class="line">63. Billy Bad 2nd 16.0</div>
+<div class="line">64. Gussysue 15.75</div>
+<div class="line">65. Oregon Okie 14.5</div>
+<div class="line">65. Julia 14.5</div>
+<div class="line">67. Deakins 13.0</div>
+<div class="line">67. Aggies 13.0</div>
+<div class="line">69. GMen 10.75</div>
 </div>
 </div>
 </body>
