--- a/bowl_pool/test/2015-2016/rankings.html
+++ b/bowl_pool/test/2015-2016/rankings.html
@@ -342,79 +342,79 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2015-12-29 18:09:09</em></div>
-<div class="line"><em>Last bowl scored:  QUICK LANE BOWL (Minnesota vs. Central Michigan)</em></div>
+<div class="line"><em>Last updated:  2015-12-31 23:13:27</em></div>
+<div class="line"><em>Last bowl scored:  COTTON BOWL (Alabama vs. Michigan State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Santa Cruz Bill 14.5</div>
-<div class="line">2. BROCOHLI !!!!! 14.25</div>
-<div class="line">3. Yellowstone  13.0</div>
-<div class="line">4. HAM BEAST 12.75</div>
-<div class="line">5. GUAC BOYZ 12.0</div>
-<div class="line">5. Devil's Tower 12.0</div>
-<div class="line">5. Corgidawg 12.0</div>
-<div class="line">8. Blind Prognosticators 11.75</div>
-<div class="line">8. Beaver Believer 11.75</div>
-<div class="line">10. <strong>Rocket Surgeon 11.5</strong></div>
-<div class="line">10. GODIVA 11.5</div>
-<div class="line">10. Cowboy 11.5</div>
-<div class="line">10. Beach Bum 11.5</div>
-<div class="line">14. Texas Women 11.25</div>
-<div class="line">14. <strong>JessePinkman 11.25</strong></div>
-<div class="line">14. Going Bowling 11.25</div>
-<div class="line">17. Shi boa 11.0</div>
-<div class="line">17. POPO 11.0</div>
-<div class="line">17. LumberSexual 11.0</div>
-<div class="line">17. Jake &amp; the Neverland Pirates 11.0</div>
-<div class="line">17. EL CAPITAN 11.0</div>
-<div class="line">22. Opposite of Dad 10.75</div>
-<div class="line">22. FF  10.75</div>
-<div class="line">24. Trollotopia 10.5</div>
-<div class="line">24. Spiker 10.5</div>
-<div class="line">24. KROB15 10.5</div>
-<div class="line">24. Hui Mama 10.5</div>
-<div class="line">24. <strong>Eclipse 10.5</strong></div>
-<div class="line">29. Lucky in 2016 10.25</div>
-<div class="line">29. Hou Dat 10.25</div>
-<div class="line">29. Cotton Headed Ninny Muggins 10.25</div>
-<div class="line">29. <strong>Captain 10.25</strong></div>
-<div class="line">33. HALF DOME 10.0</div>
-<div class="line">34. Texsons 9.75</div>
-<div class="line">34. Clairvoyantsmith 9.75</div>
-<div class="line">36. Tan Mei yi&nbsp; 9.5</div>
-<div class="line">36. Pooh 9.5</div>
-<div class="line">36. Oregon Okie 9.5</div>
-<div class="line">36. Hunter 55 9.5</div>
-<div class="line">36. Go Frogs 9.5</div>
-<div class="line">36. FIELDS OF WHEAT 9.5</div>
-<div class="line">42. West Coast Bias 9.25</div>
-<div class="line">42. TTRedRaider09 9.25</div>
-<div class="line">42. Slave Darby 9.25</div>
-<div class="line">42. <strong>D-bo 9.25</strong></div>
-<div class="line">46. Perfect Spiral 9.0</div>
-<div class="line">46. BUBBA 9.0</div>
-<div class="line">48. Trojans 8.75</div>
-<div class="line">48. Texas State 8.75</div>
-<div class="line">50. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 8.25</div>
-<div class="line">50. Spartans 8.25</div>
-<div class="line">50. Gussysue 8.25</div>
-<div class="line">53. Julia 8.0</div>
-<div class="line">54. Sure Thing 7.75</div>
-<div class="line">55. The Force Awakens 7.5</div>
-<div class="line">55. <strong>Surf 7.5</strong></div>
-<div class="line">55. Billy Bad 2nd 7.5</div>
-<div class="line">55. Billy Bad 7.5</div>
-<div class="line">59. Team Aaron 7.25</div>
-<div class="line">59. <strong>Groodle 7.25</strong></div>
-<div class="line">61. <strong>Mama Bear 7.0</strong></div>
-<div class="line">62. Magnitogorsk 6.75</div>
-<div class="line">63. Frog Man 4Ever 6.5</div>
-<div class="line">63. Deakins 6.5</div>
-<div class="line">65. Yoda 6.25</div>
-<div class="line">66. COUGAR 6.0</div>
-<div class="line">66. Aggies 6.0</div>
-<div class="line">68. GMen 5.5</div>
-<div class="line">69. Bernie Trump 5.0</div>
+<div class="line">1. BROCOHLI !!!!! 27.5</div>
+<div class="line">2. Beaver Believer 27.0</div>
+<div class="line">3. <strong>Rocket Surgeon 26.25</strong></div>
+<div class="line">4. <strong>Eclipse 25.5</strong></div>
+<div class="line">5. <strong>JessePinkman 25.25</strong></div>
+<div class="line">6. Texsons 24.75</div>
+<div class="line">6. Team Aaron 24.75</div>
+<div class="line">6. Jake &amp; the Neverland Pirates 24.75</div>
+<div class="line">9. GUAC BOYZ 24.25</div>
+<div class="line">10. Spiker 24.0</div>
+<div class="line">11. Yoda 23.75</div>
+<div class="line">11. Santa Cruz Bill 23.75</div>
+<div class="line">11. Corgidawg 23.75</div>
+<div class="line">14. POPO 23.5</div>
+<div class="line">14. HAM BEAST 23.5</div>
+<div class="line">16. Cowboy 23.0</div>
+<div class="line">17. Yellowstone  22.75</div>
+<div class="line">17. Devil's Tower 22.75</div>
+<div class="line">19. FIELDS OF WHEAT 22.5</div>
+<div class="line">20. Hou Dat 22.25</div>
+<div class="line">20. Go Frogs 22.25</div>
+<div class="line">22. KROB15 22.0</div>
+<div class="line">23. Perfect Spiral 21.75</div>
+<div class="line">24. Texas Women 21.5</div>
+<div class="line">24. Lucky in 2016 21.5</div>
+<div class="line">24. GODIVA 21.5</div>
+<div class="line">27. West Coast Bias 21.0</div>
+<div class="line">27. TTRedRaider09 21.0</div>
+<div class="line">27. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 21.0</div>
+<div class="line">27. FF  21.0</div>
+<div class="line">27. Beach Bum 21.0</div>
+<div class="line">32. Opposite of Dad 20.75</div>
+<div class="line">33. Hunter 55 20.5</div>
+<div class="line">34. The Force Awakens 20.25</div>
+<div class="line">35. Frog Man 4Ever 20.0</div>
+<div class="line">35. BUBBA 20.0</div>
+<div class="line">37. Tan Mei yi&nbsp; 19.75</div>
+<div class="line">37. Slave Darby 19.75</div>
+<div class="line">37. Going Bowling 19.75</div>
+<div class="line">37. Clairvoyantsmith 19.75</div>
+<div class="line">41. Texas State 19.5</div>
+<div class="line">41. <strong>D-bo 19.5</strong></div>
+<div class="line">43. Sure Thing 19.25</div>
+<div class="line">43. <strong>Captain 19.25</strong></div>
+<div class="line">45. Pooh 19.0</div>
+<div class="line">45. Blind Prognosticators 19.0</div>
+<div class="line">47. HALF DOME 18.75</div>
+<div class="line">48. <strong>Mama Bear 18.5</strong></div>
+<div class="line">49. Trojans 18.25</div>
+<div class="line">49. LumberSexual 18.25</div>
+<div class="line">51. Magnitogorsk 18.0</div>
+<div class="line">51. Cotton Headed Ninny Muggins 18.0</div>
+<div class="line">53. <strong>Surf 17.75</strong></div>
+<div class="line">53. EL CAPITAN 17.75</div>
+<div class="line">55. Trollotopia 17.5</div>
+<div class="line">56. Shi boa 17.25</div>
+<div class="line">57. Spartans 17.0</div>
+<div class="line">58. Hui Mama 16.75</div>
+<div class="line">58. COUGAR 16.75</div>
+<div class="line">60. <strong>Groodle 16.5</strong></div>
+<div class="line">60. Billy Bad 16.5</div>
+<div class="line">60. Bernie Trump 16.5</div>
+<div class="line">63. Billy Bad 2nd 16.0</div>
+<div class="line">64. Gussysue 15.75</div>
+<div class="line">65. Oregon Okie 14.5</div>
+<div class="line">65. Julia 14.5</div>
+<div class="line">67. Deakins 13.0</div>
+<div class="line">67. Aggies 13.0</div>
+<div class="line">69. GMen 10.75</div>
 </div>
 </div>
 </body>
