--- a/bowl_pool/2015-2016/results.html
+++ b/bowl_pool/2015-2016/results.html
@@ -2146,6 +2146,231 @@ ul.auto-toc {
 <td>1.25</td>
 <td>1.25</td>
 </tr>
+<tr><td>23</td>
+<td>PEACH BOWL</td>
+<td>Florida State</td>
+<td>Houston</td>
+<td>7.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+</tr>
+<tr><td>24</td>
+<td>ORANGE BOWL</td>
+<td>Oklahoma</td>
+<td>Clemson</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>3.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.5</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>3.5</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.5</td>
+</tr>
+<tr><td>25</td>
+<td>COTTON BOWL</td>
+<td>Alabama</td>
+<td>Michigan State</td>
+<td>9.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+</tr>
 <tr><td>T1</td>
 <td>Total points for BOTH semifinal games</td>
 <td>&nbsp;</td>
@@ -2301,75 +2526,75 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 </tr>
 <tr><td>B3</td>
 <td>Baker Mayfield more than 40 yard NET rushing</td>
@@ -2378,21 +2603,27 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -2403,47 +2634,41 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 </tr>
 <tr><td>B4</td>
@@ -2452,93 +2677,100 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
+<td>1.0</td>
 </tr>
 <tr><td>B5</td>
 <td>Derrick Henry runs for more than 120 yards</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -2554,14 +2786,21 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -2572,104 +2811,90 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
+<td>1.0</td>
 </tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>9.0</strong></td>
-<td><strong>15.5</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>27.0</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>16.0</strong></td>
 <td><strong>19.0</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>12.0</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>10.75</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>25.25</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>18.25</strong></td>
 <td><strong>18.0</strong></td>
 <td><strong>18.5</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>17.25</strong></td>
+<td><strong>20.75</strong></td>
 <td><strong>14.5</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>16.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>19.75</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>17.0</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>19.25</strong></td>
 <td><strong>17.75</strong></td>
 <td><strong>19.75</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>13.75</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>23.75</strong></td>
 </tr>
 </tbody>
 </table>
