--- a/bowl_pool/2015-2016/rankings.html
+++ b/bowl_pool/2015-2016/rankings.html
@@ -342,79 +342,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2015-12-31 23:27:38</em></div>
-<div class="line"><em>Last bowl scored:  COTTON BOWL (Alabama vs. Michigan State)</em></div>
+<div class="line"><em>Last updated:  2016-01-01 16:16:23</em></div>
+<div class="line"><em>Last bowl scored:  CITRUS BOWL (Michigan vs. Florida)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. BROCOHLI !!!!! 27.5</div>
-<div class="line">2. Beaver Believer 27.0</div>
-<div class="line">3. <strong>Rocket Surgeon 26.25</strong></div>
-<div class="line">4. <strong>Eclipse 25.5</strong></div>
-<div class="line">5. <strong>JessePinkman 25.25</strong></div>
-<div class="line">6. Texsons 24.75</div>
-<div class="line">6. Team Aaron 24.75</div>
-<div class="line">6. Jake &amp; the Neverland Pirates 24.75</div>
-<div class="line">9. GUAC BOYZ 24.25</div>
-<div class="line">10. Spiker 24.0</div>
-<div class="line">11. Yoda 23.75</div>
-<div class="line">11. Santa Cruz Bill 23.75</div>
-<div class="line">11. Corgidawg 23.75</div>
-<div class="line">14. POPO 23.5</div>
-<div class="line">14. HAM BEAST 23.5</div>
-<div class="line">16. Cowboy 23.0</div>
-<div class="line">17. Yellowstone  22.75</div>
-<div class="line">17. Devil's Tower 22.75</div>
-<div class="line">19. FIELDS OF WHEAT 22.5</div>
-<div class="line">20. Hou Dat 22.25</div>
-<div class="line">20. Go Frogs 22.25</div>
-<div class="line">22. KROB15 22.0</div>
-<div class="line">23. Perfect Spiral 21.75</div>
-<div class="line">24. Texas Women 21.5</div>
-<div class="line">24. Lucky in 2016 21.5</div>
-<div class="line">24. GODIVA 21.5</div>
-<div class="line">27. West Coast Bias 21.0</div>
-<div class="line">27. TTRedRaider09 21.0</div>
-<div class="line">27. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 21.0</div>
-<div class="line">27. FF  21.0</div>
-<div class="line">27. Beach Bum 21.0</div>
-<div class="line">32. Opposite of Dad 20.75</div>
-<div class="line">33. Hunter 55 20.5</div>
-<div class="line">34. The Force Awakens 20.25</div>
-<div class="line">35. Frog Man 4Ever 20.0</div>
-<div class="line">35. BUBBA 20.0</div>
-<div class="line">37. Tan Mei yi&nbsp; 19.75</div>
-<div class="line">37. Slave Darby 19.75</div>
-<div class="line">37. Going Bowling 19.75</div>
-<div class="line">37. Clairvoyantsmith 19.75</div>
-<div class="line">41. Texas State 19.5</div>
-<div class="line">41. <strong>D-bo 19.5</strong></div>
-<div class="line">43. Sure Thing 19.25</div>
-<div class="line">43. <strong>Captain 19.25</strong></div>
-<div class="line">45. Pooh 19.0</div>
-<div class="line">45. Blind Prognosticators 19.0</div>
-<div class="line">47. HALF DOME 18.75</div>
-<div class="line">48. <strong>Mama Bear 18.5</strong></div>
-<div class="line">49. Trojans 18.25</div>
-<div class="line">49. LumberSexual 18.25</div>
-<div class="line">51. Magnitogorsk 18.0</div>
-<div class="line">51. Cotton Headed Ninny Muggins 18.0</div>
-<div class="line">53. <strong>Surf 17.75</strong></div>
-<div class="line">53. EL CAPITAN 17.75</div>
-<div class="line">55. Trollotopia 17.5</div>
-<div class="line">56. Shi boa 17.25</div>
-<div class="line">57. Spartans 17.0</div>
-<div class="line">58. Hui Mama 16.75</div>
-<div class="line">58. COUGAR 16.75</div>
-<div class="line">60. <strong>Groodle 16.5</strong></div>
-<div class="line">60. Billy Bad 16.5</div>
-<div class="line">60. Bernie Trump 16.5</div>
-<div class="line">63. Billy Bad 2nd 16.0</div>
-<div class="line">64. Gussysue 15.75</div>
-<div class="line">65. Oregon Okie 14.5</div>
-<div class="line">65. Julia 14.5</div>
-<div class="line">67. Deakins 13.0</div>
-<div class="line">67. Aggies 13.0</div>
-<div class="line">69. GMen 10.75</div>
+<div class="line">1. Beaver Believer 31.0</div>
+<div class="line">2. BROCOHLI !!!!! 29.5</div>
+<div class="line">3. <strong>Rocket Surgeon 29.25</strong></div>
+<div class="line">4. Jake &amp; the Neverland Pirates 28.75</div>
+<div class="line">4. Texsons 28.75</div>
+<div class="line">6. <strong>Eclipse 28.5</strong></div>
+<div class="line">6. POPO 28.5</div>
+<div class="line">8. GUAC BOYZ 28.25</div>
+<div class="line">9. Spiker 28.0</div>
+<div class="line">10. Corgidawg 27.75</div>
+<div class="line">10. Devil's Tower 27.75</div>
+<div class="line">10. Santa Cruz Bill 27.75</div>
+<div class="line">10. Yellowstone  27.75</div>
+<div class="line">14. HAM BEAST 27.5</div>
+<div class="line">15. Team Aaron 26.75</div>
+<div class="line">15. Yoda 26.75</div>
+<div class="line">17. <strong>JessePinkman 26.25</strong></div>
+<div class="line">18. Cowboy 26.0</div>
+<div class="line">18. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 26.0</div>
+<div class="line">20. Perfect Spiral 25.75</div>
+<div class="line">21. FIELDS OF WHEAT 25.5</div>
+<div class="line">21. Hunter 55 25.5</div>
+<div class="line">21. Texas Women 25.5</div>
+<div class="line">24. <strong>Captain 25.25</strong></div>
+<div class="line">24. Hou Dat 25.25</div>
+<div class="line">26. BUBBA 25.0</div>
+<div class="line">26. Frog Man 4Ever 25.0</div>
+<div class="line">28. Lucky in 2016 24.5</div>
+<div class="line">29. West Coast Bias 24.0</div>
+<div class="line">30. HALF DOME 23.75</div>
+<div class="line">30. Slave Darby 23.75</div>
+<div class="line">30. Tan Mei yi&nbsp; 23.75</div>
+<div class="line">33. Go Frogs 23.25</div>
+<div class="line">34. Julia 23.0</div>
+<div class="line">34. KROB15 23.0</div>
+<div class="line">36. EL CAPITAN 22.75</div>
+<div class="line">36. Going Bowling 22.75</div>
+<div class="line">36. <strong>Surf 22.75</strong></div>
+<div class="line">39. <strong>D-bo 22.5</strong></div>
+<div class="line">39. GODIVA 22.5</div>
+<div class="line">41. LumberSexual 22.25</div>
+<div class="line">41. Trojans 22.25</div>
+<div class="line">43. Beach Bum 22.0</div>
+<div class="line">43. Blind Prognosticators 22.0</div>
+<div class="line">43. FF  22.0</div>
+<div class="line">43. Magnitogorsk 22.0</div>
+<div class="line">43. TTRedRaider09 22.0</div>
+<div class="line">48. Clairvoyantsmith 21.75</div>
+<div class="line">48. Opposite of Dad 21.75</div>
+<div class="line">50. Trollotopia 21.5</div>
+<div class="line">51. Shi boa 21.25</div>
+<div class="line">51. Sure Thing 21.25</div>
+<div class="line">51. The Force Awakens 21.25</div>
+<div class="line">54. Cotton Headed Ninny Muggins 21.0</div>
+<div class="line">55. Hui Mama 20.75</div>
+<div class="line">56. <strong>Mama Bear 20.5</strong></div>
+<div class="line">56. Oregon Okie 20.5</div>
+<div class="line">56. Texas State 20.5</div>
+<div class="line">59. Blondy 20.0</div>
+<div class="line">59. Spartans 20.0</div>
+<div class="line">61. Billy Bad 19.5</div>
+<div class="line">62. Billy Bad 2nd 19.0</div>
+<div class="line">62. Pooh 19.0</div>
+<div class="line">64. COUGAR 18.75</div>
+<div class="line">64. Gussysue 18.75</div>
+<div class="line">66. Bernie Trump 17.5</div>
+<div class="line">66. <strong>Groodle 17.5</strong></div>
+<div class="line">68. Aggies 17.0</div>
+<div class="line">68. Deakins 17.0</div>
+<div class="line">70. GMen 13.75</div>
 </div>
 </div>
 </body>
