--- a/bowl_pool/test/2015-2016/results.html
+++ b/bowl_pool/test/2015-2016/results.html
@@ -417,6 +417,7 @@ ul.auto-toc {
 <col width="1%" />
 <col width="1%" />
 <col width="1%" />
+<col width="1%" />
 </colgroup>
 <thead valign="bottom">
 <tr><th class="head">ID</th>
@@ -431,6 +432,7 @@ ul.auto-toc {
 <th class="head">Billy Bad</th>
 <th class="head">Billy Bad 2nd</th>
 <th class="head">Blind Prognosticators</th>
+<th class="head">Blondy</th>
 <th class="head">BROCOHLI !!!!!</th>
 <th class="head">BUBBA</th>
 <th class="head">Captain</th>
@@ -501,6 +503,7 @@ ul.auto-toc {
 <td>Utah State</td>
 <td>Akron</td>
 <td>6.5</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -583,6 +586,7 @@ ul.auto-toc {
 <td>1.25</td>
 <td>1.25</td>
 <td>0.0</td>
+<td>0.0</td>
 <td>1.25</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -661,6 +665,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -733,6 +738,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>2.0</td>
+<td>0.0</td>
 <td>2.0</td>
 <td>0.0</td>
 <td>2.0</td>
@@ -808,6 +814,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -883,7 +890,30 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
+<td>0.0</td>
 <td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -891,29 +921,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
+<td>2.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -958,6 +966,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -1032,6 +1041,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>2.0</td>
 <td>1.0</td>
@@ -1112,6 +1122,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>1.0</td>
 <td>2.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -1183,6 +1194,7 @@ ul.auto-toc {
 <td>1.25</td>
 <td>1.25</td>
 <td>1.25</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
@@ -1258,6 +1270,7 @@ ul.auto-toc {
 <td>2.0</td>
 <td>1.0</td>
 <td>2.0</td>
+<td>1.0</td>
 <td>2.0</td>
 <td>2.0</td>
 <td>1.0</td>
@@ -1295,7 +1308,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
-<td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
@@ -1333,6 +1346,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>1.5</td>
+<td>0.0</td>
 <td>1.5</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1407,6 +1421,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
@@ -1485,22 +1500,23 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -1513,7 +1529,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
-<td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1566,18 +1582,9 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
+<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -1588,7 +1595,17 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>2.0</td>
 <td>1.0</td>
@@ -1633,20 +1650,15 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1656,6 +1668,10 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1664,6 +1680,8 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -1708,26 +1726,6 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.25</td>
 <td>1.25</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>1.25</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>1.25</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
 <td>0.0</td>
@@ -1736,9 +1734,30 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.25</td>
 <td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>1.25</td>
 <td>0.0</td>
 <td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
 <td>0.0</td>
@@ -1784,6 +1803,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>1.0</td>
 <td>2.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -1813,7 +1833,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>0.0</td>
+<td>1.0</td>
 <td>2.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -1861,6 +1881,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -1888,7 +1909,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
-<td>0.0</td>
+<td>2.0</td>
 <td>2.0</td>
 <td>0.0</td>
 <td>1.0</td>
@@ -1933,21 +1954,9 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -1955,6 +1964,19 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
@@ -1963,7 +1985,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -2008,6 +2030,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -2038,7 +2061,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -2086,25 +2109,19 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>1.25</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
-<td>0.0</td>
-<td>1.25</td>
-<td>1.25</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>1.25</td>
-<td>0.0</td>
 <td>1.25</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
 <td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
 <td>0.0</td>
 <td>1.25</td>
 <td>0.0</td>
@@ -2114,6 +2131,13 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
@@ -2158,37 +2182,38 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.5</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.5</td>
-<td>1.5</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
 <td>0.0</td>
 <td>1.5</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>1.5</td>
 <td>0.0</td>
 <td>1.5</td>
 <td>0.0</td>
 <td>1.5</td>
+<td>0.0</td>
 <td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
 <td>1.5</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -2233,6 +2258,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
 <td>2.5</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -2263,7 +2289,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>3.5</td>
 <td>2.5</td>
-<td>2.5</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -2308,10 +2334,11 @@ ul.auto-toc {
 <td>3.0</td>
 <td>3.0</td>
 <td>0.0</td>
-<td>3.0</td>
 <td>2.0</td>
 <td>3.0</td>
 <td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
 <td>2.0</td>
 <td>0.0</td>
 <td>2.0</td>
@@ -2326,19 +2353,19 @@ ul.auto-toc {
 <td>3.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>2.0</td>
-<td>0.0</td>
-<td>3.0</td>
 <td>0.0</td>
 <td>2.0</td>
 <td>0.0</td>
 <td>3.0</td>
 <td>0.0</td>
 <td>2.0</td>
-<td>2.0</td>
-<td>2.0</td>
 <td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>3.0</td>
 <td>2.0</td>
 <td>0.0</td>
@@ -2371,155 +2398,233 @@ ul.auto-toc {
 <td>2.0</td>
 <td>2.0</td>
 </tr>
-<tr><td>T1</td>
-<td>Total points for BOTH semifinal games</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
+<tr><td>26</td>
+<td>OUTBACK BOWL</td>
+<td>Tennessee</td>
+<td>Northwestern</td>
+<td>8.5</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 </tr>
-<tr><td>B1</td>
-<td>Who will win the National Championship</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
+<tr><td>27</td>
+<td>FIESTA BOWL</td>
+<td>Ohio State</td>
+<td>Notre Dame</td>
+<td>6.5</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>3.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
 <td>0.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
 <td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+</tr>
+<tr><td>28</td>
+<td>CITRUS BOWL</td>
+<td>Michigan</td>
+<td>Florida</td>
+<td>4.5</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
 </tr>
 <tr><td>B2</td>
 <td>Deshaun Watson &gt; total yards than Baker Mayfield</td>
@@ -2530,6 +2635,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -2612,6 +2718,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -2683,6 +2790,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
+<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -2758,6 +2866,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -2826,75 +2935,76 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>13.0</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>27.0</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>27.5</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>25.25</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>20.75</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>21.75</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>19.75</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>24.0</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>18.25</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>31.0</strong></td>
 <td><strong>17.5</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>29.5</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>25.25</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>27.75</strong></td>
 <td><strong>21.0</strong></td>
-<td><strong>21.0</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>26.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>25.25</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>28.0</strong></td>
+<td><strong>26.0</strong></td>
+<td><strong>21.25</strong></td>
 <td><strong>22.75</strong></td>
 <td><strong>23.75</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>26.75</strong></td>
 </tr>
 </tbody>
 </table>
