Updated to include Rose Bowl result.

--- a/bowl_pool/2015-2016/results.html
+++ b/bowl_pool/2015-2016/results.html
@@ -2626,6 +2626,82 @@ ul.auto-toc {
 <td>2.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>29</td>
+<td>ROSE BOWL</td>
+<td>Stanford</td>
+<td>Iowa</td>
+<td>6.5</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+</tr>
 <tr><td>B2</td>
 <td>Deshaun Watson &gt; total yards than Baker Mayfield</td>
 <td>&nbsp;</td>
@@ -2935,76 +3011,76 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>17.0</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>31.0</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>22.0</strong></td>
 <td><strong>20.0</strong></td>
-<td><strong>29.5</strong></td>
 <td><strong>25.0</strong></td>
-<td><strong>25.25</strong></td>
-<td><strong>21.75</strong></td>
-<td><strong>27.75</strong></td>
+<td><strong>33.0</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>21.5</strong></td>
 <td><strong>21.0</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>26.0</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>27.75</strong></td>
-<td><strong>28.5</strong></td>
-<td><strong>22.75</strong></td>
+<td><strong>24.0</strong></td>
 <td><strong>22.0</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>25.0</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>23.25</strong></td>
-<td><strong>22.5</strong></td>
+<td><strong>29.5</strong></td>
+<td><strong>27.0</strong></td>
+<td><strong>25.25</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>30.5</strong></td>
 <td><strong>22.75</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>27.0</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>24.75</strong></td>
 <td><strong>17.5</strong></td>
 <td><strong>28.25</strong></td>
-<td><strong>18.75</strong></td>
+<td><strong>20.75</strong></td>
 <td><strong>23.75</strong></td>
 <td><strong>27.5</strong></td>
 <td><strong>25.25</strong></td>
-<td><strong>20.75</strong></td>
+<td><strong>23.75</strong></td>
 <td><strong>25.5</strong></td>
-<td><strong>28.75</strong></td>
-<td><strong>26.25</strong></td>
+<td><strong>31.75</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>26.0</strong></td>
 <td><strong>23.0</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>24.5</strong></td>
-<td><strong>22.25</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>24.25</strong></td>
 <td><strong>22.0</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>21.75</strong></td>
-<td><strong>20.5</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>22.5</strong></td>
 <td><strong>25.75</strong></td>
 <td><strong>19.0</strong></td>
 <td><strong>28.5</strong></td>
-<td><strong>29.25</strong></td>
-<td><strong>27.75</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>28.0</strong></td>
-<td><strong>26.0</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>26.75</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>28.75</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>21.5</strong></td>
+<td><strong>31.25</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>25.75</strong></td>
 <td><strong>22.0</strong></td>
-<td><strong>24.0</strong></td>
+<td><strong>31.0</strong></td>
+<td><strong>28.0</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>30.75</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>27.0</strong></td>
 <td><strong>27.75</strong></td>
-<td><strong>26.75</strong></td>
+<td><strong>29.75</strong></td>
 </tr>
 </tbody>
 </table>
