--- a/bowl_pool/2015-2016/rankings.html
+++ b/bowl_pool/2015-2016/rankings.html
@@ -342,80 +342,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-01-01 16:16:23</em></div>
-<div class="line"><em>Last bowl scored:  CITRUS BOWL (Michigan vs. Florida)</em></div>
+<div class="line"><em>Last updated:  2016-01-01 20:17:12</em></div>
+<div class="line"><em>Last bowl scored:  ROSE BOWL (Stanford vs. Iowa)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Beaver Believer 31.0</div>
-<div class="line">2. BROCOHLI !!!!! 29.5</div>
-<div class="line">3. <strong>Rocket Surgeon 29.25</strong></div>
-<div class="line">4. Jake &amp; the Neverland Pirates 28.75</div>
-<div class="line">4. Texsons 28.75</div>
-<div class="line">6. <strong>Eclipse 28.5</strong></div>
-<div class="line">6. POPO 28.5</div>
-<div class="line">8. GUAC BOYZ 28.25</div>
-<div class="line">9. Spiker 28.0</div>
-<div class="line">10. Corgidawg 27.75</div>
-<div class="line">10. Devil's Tower 27.75</div>
-<div class="line">10. Santa Cruz Bill 27.75</div>
-<div class="line">10. Yellowstone  27.75</div>
-<div class="line">14. HAM BEAST 27.5</div>
-<div class="line">15. Team Aaron 26.75</div>
-<div class="line">15. Yoda 26.75</div>
-<div class="line">17. <strong>JessePinkman 26.25</strong></div>
-<div class="line">18. Cowboy 26.0</div>
-<div class="line">18. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 26.0</div>
-<div class="line">20. Perfect Spiral 25.75</div>
-<div class="line">21. FIELDS OF WHEAT 25.5</div>
-<div class="line">21. Hunter 55 25.5</div>
-<div class="line">21. Texas Women 25.5</div>
-<div class="line">24. <strong>Captain 25.25</strong></div>
-<div class="line">24. Hou Dat 25.25</div>
-<div class="line">26. BUBBA 25.0</div>
-<div class="line">26. Frog Man 4Ever 25.0</div>
-<div class="line">28. Lucky in 2016 24.5</div>
-<div class="line">29. West Coast Bias 24.0</div>
-<div class="line">30. HALF DOME 23.75</div>
-<div class="line">30. Slave Darby 23.75</div>
-<div class="line">30. Tan Mei yi&nbsp; 23.75</div>
-<div class="line">33. Go Frogs 23.25</div>
-<div class="line">34. Julia 23.0</div>
-<div class="line">34. KROB15 23.0</div>
-<div class="line">36. EL CAPITAN 22.75</div>
-<div class="line">36. Going Bowling 22.75</div>
-<div class="line">36. <strong>Surf 22.75</strong></div>
-<div class="line">39. <strong>D-bo 22.5</strong></div>
-<div class="line">39. GODIVA 22.5</div>
-<div class="line">41. LumberSexual 22.25</div>
-<div class="line">41. Trojans 22.25</div>
-<div class="line">43. Beach Bum 22.0</div>
-<div class="line">43. Blind Prognosticators 22.0</div>
-<div class="line">43. FF  22.0</div>
-<div class="line">43. Magnitogorsk 22.0</div>
-<div class="line">43. TTRedRaider09 22.0</div>
-<div class="line">48. Clairvoyantsmith 21.75</div>
-<div class="line">48. Opposite of Dad 21.75</div>
-<div class="line">50. Trollotopia 21.5</div>
-<div class="line">51. Shi boa 21.25</div>
-<div class="line">51. Sure Thing 21.25</div>
-<div class="line">51. The Force Awakens 21.25</div>
-<div class="line">54. Cotton Headed Ninny Muggins 21.0</div>
-<div class="line">55. Hui Mama 20.75</div>
-<div class="line">56. <strong>Mama Bear 20.5</strong></div>
-<div class="line">56. Oregon Okie 20.5</div>
-<div class="line">56. Texas State 20.5</div>
-<div class="line">59. Blondy 20.0</div>
-<div class="line">59. Spartans 20.0</div>
-<div class="line">61. Billy Bad 19.5</div>
-<div class="line">62. Billy Bad 2nd 19.0</div>
-<div class="line">62. Pooh 19.0</div>
-<div class="line">64. COUGAR 18.75</div>
-<div class="line">64. Gussysue 18.75</div>
-<div class="line">66. Bernie Trump 17.5</div>
-<div class="line">66. <strong>Groodle 17.5</strong></div>
-<div class="line">68. Aggies 17.0</div>
-<div class="line">68. Deakins 17.0</div>
-<div class="line">70. GMen 13.75</div>
+<div class="line">1. Beaver Believer 33.0</div>
+<div class="line">2. Jake &amp; the Neverland Pirates 31.75</div>
+<div class="line">3. <strong>Rocket Surgeon 31.25</strong></div>
+<div class="line">4. Spiker 31.0</div>
+<div class="line">5. Texsons 30.75</div>
+<div class="line">6. <strong>Eclipse 30.5</strong></div>
+<div class="line">7. Corgidawg 29.75</div>
+<div class="line">7. Santa Cruz Bill 29.75</div>
+<div class="line">7. Team Aaron 29.75</div>
+<div class="line">7. Yoda 29.75</div>
+<div class="line">11. BROCOHLI !!!!! 29.5</div>
+<div class="line">12. Cowboy 29.0</div>
+<div class="line">13. POPO 28.5</div>
+<div class="line">14. GUAC BOYZ 28.25</div>
+<div class="line">14. <strong>JessePinkman 28.25</strong></div>
+<div class="line">16. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 28.0</div>
+<div class="line">17. Devil's Tower 27.75</div>
+<div class="line">17. Yellowstone  27.75</div>
+<div class="line">19. FIELDS OF WHEAT 27.5</div>
+<div class="line">19. HAM BEAST 27.5</div>
+<div class="line">19. Texas Women 27.5</div>
+<div class="line">22. BUBBA 27.0</div>
+<div class="line">22. Frog Man 4Ever 27.0</div>
+<div class="line">22. West Coast Bias 27.0</div>
+<div class="line">25. Lucky in 2016 26.5</div>
+<div class="line">26. Julia 26.0</div>
+<div class="line">27. Perfect Spiral 25.75</div>
+<div class="line">27. Slave Darby 25.75</div>
+<div class="line">27. Tan Mei yi&nbsp; 25.75</div>
+<div class="line">30. GODIVA 25.5</div>
+<div class="line">30. Hunter 55 25.5</div>
+<div class="line">32. <strong>Captain 25.25</strong></div>
+<div class="line">32. Hou Dat 25.25</div>
+<div class="line">34. Beach Bum 25.0</div>
+<div class="line">35. Going Bowling 24.75</div>
+<div class="line">35. <strong>Surf 24.75</strong></div>
+<div class="line">37. <strong>D-bo 24.5</strong></div>
+<div class="line">38. LumberSexual 24.25</div>
+<div class="line">38. Shi boa 24.25</div>
+<div class="line">38. The Force Awakens 24.25</div>
+<div class="line">41. Blind Prognosticators 24.0</div>
+<div class="line">41. FF  24.0</div>
+<div class="line">43. Clairvoyantsmith 23.75</div>
+<div class="line">43. HALF DOME 23.75</div>
+<div class="line">43. Hui Mama 23.75</div>
+<div class="line">43. Opposite of Dad 23.75</div>
+<div class="line">47. Texas State 23.5</div>
+<div class="line">47. Trollotopia 23.5</div>
+<div class="line">49. Go Frogs 23.25</div>
+<div class="line">49. Sure Thing 23.25</div>
+<div class="line">51. KROB15 23.0</div>
+<div class="line">52. EL CAPITAN 22.75</div>
+<div class="line">53. <strong>Mama Bear 22.5</strong></div>
+<div class="line">53. Oregon Okie 22.5</div>
+<div class="line">55. Trojans 22.25</div>
+<div class="line">56. Blondy 22.0</div>
+<div class="line">56. Magnitogorsk 22.0</div>
+<div class="line">56. Spartans 22.0</div>
+<div class="line">56. TTRedRaider09 22.0</div>
+<div class="line">60. COUGAR 21.75</div>
+<div class="line">61. Billy Bad 21.5</div>
+<div class="line">62. Billy Bad 2nd 21.0</div>
+<div class="line">62. Cotton Headed Ninny Muggins 21.0</div>
+<div class="line">64. Gussysue 20.75</div>
+<div class="line">65. Bernie Trump 20.5</div>
+<div class="line">66. Aggies 20.0</div>
+<div class="line">66. Deakins 20.0</div>
+<div class="line">68. Pooh 19.0</div>
+<div class="line">69. <strong>Groodle 17.5</strong></div>
+<div class="line">70. GMen 15.75</div>
 </div>
 </div>
 </body>
